--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "express": "^4.17.1",
+    "nuxt": "^2.14.12",
+    "openapi-enforcer": "^1.13.3",
+    "openapi-enforcer-middleware": "^2.0.0-alpha-7"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
@@ -19,6 +22,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
     "vue-jest": "^3.0.4"
   }
 }
