--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "core-js": "^3.8.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nuxt": "^2.14.12",
     "openapi-enforcer": "^1.13.3",
-    "openapi-enforcer-middleware": "^2.0.0-alpha-7"
+    "openapi-enforcer-middleware": "^2.0.0-alpha-7",
+    "pg": "^8.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/bcrypt": "^3.0.0",
+    "@types/pg": "^7.14.10",
+    "@types/uuid": "^8.3.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
