--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.8.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -23,12 +24,18 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express-session": "^1.17.3",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.10",
     "@types/uuid": "^8.3.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
+    "express-session": "^1.17.1",
     "jest": "^26.6.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
     "vue-jest": "^3.0.4"
