--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.8.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.14.12",
     "openapi-enforcer": "^1.13.3",
     "openapi-enforcer-middleware": "^2.0.0-alpha-7",
