--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
